Fix labels' alignment in Files.app's files list.
Before, the labels were not properly aligned. This patch aligns them by simplifying the css.

TEST=Enter Files.app, check carefully the headers. Click on the 'select all' checkbox.
BUG=175962

Review URL: https://codereview.chromium.org/12262032

git-svn-id: svn://svn.chromium.org/chrome/trunk/src@182391 0039d316-1c4b-4281-b951-d872f2087c98

Former-commit-id: 09f7812bd45aecee8785621e45a40852e273e9d1

--- a/chrome/browser/resources/file_manager/css/file_manager.css
+++ b/chrome/browser/resources/file_manager/css/file_manager.css
@@ -1036,7 +1036,7 @@ input.rename {
 
 /* Text label in a table header. */
 .table-header-label {
-  margin: 5px 10px 0 9px;
+  line-height: 27px;
 }
 
 .table-row-cell > * {
@@ -1063,13 +1063,11 @@ input.rename {
 }
 
 #select-all-checkbox {
-  -webkit-margin-end: 11px;
-  -webkit-margin-start: 1px;
+  -webkit-margin-end: 7px;
+  -webkit-margin-start: 2px;
   margin-bottom: 0;
   margin-top: 0;
-  /* 1px below text */
-  position: relative;
-  top: 1px;
+  vertical-align: middle;
 }
 
 #list-container li.table-row:hover .file-checkbox,
